...
    <!-- menu items -->
    <string name="app_settings">App Settings</string>
    <string name="rightmesh_settings">RightMesh Settings</string>
    <string name="connected_peers">Connected Peers</string>

    <!-- menu bar items-->
    <string name="login_menu_title">Login</string>
    <string name="signup_menu_title">Signup</string>
    <string name="landing_menu_title">Landing Page</string>

    <!-- notification items -->
    <string name="by">by: </string>

...
    <string name="failed_to_save_data">Can not save the data</string>

    <!-- General strings for use throughout the app -->
    <string name="done">Done</string>
    <string name="application_logo">Application Logo</string>
    <string name="rightmesh_credit">RightMesh Credit</string>
    <string name="enter">Enter</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>

    <!-- Error Messages -->
...
